# KinetiRover

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  docker_build_run.sh  requirement.txt
arm/px100_perception/config/: perception_params.yaml
arm/px100_perception/launch/: realsense_perception.launch
arm/px100_perception/scripts/: realsense_perception.py
docs/: CNAME  _config.yml  index.md
docs/tutorials/: gazebo-simulation.md  getting-started.md  moveit-setup.md  perception-pipeline.md  realsense-setup.md  robot-description.md
setup/: 99-dynamixel.rules  99-realsense-libusb.rules
src/arm/px100_core/: README.md  package.xml
src/arm/px100_core/px100_control/: CMakeLists.txt  package.xml
src/arm/px100_core/px100_control/config/: motor_configs_template.yaml
src/arm/px100_core/px100_control/include/px100_control/: mr_kinetik_hardware_interface_obj.h
src/arm/px100_core/px100_control/launch/: px100_control.launch
src/arm/px100_core/px100_control/script/: joint_state_publisher.py
src/arm/px100_core/px100_control/src/: mr_kinetik_hardware_interface.cpp
src/arm/px100_core/px100_dynamixel_interface/: CMakeLists.txt  package.xml
src/arm/px100_core/px100_dynamixel_interface/config/: mode_configs_template.yaml  motor_configs_template.yaml
src/arm/px100_core/px100_dynamixel_interface/include/px100_dynamixel_interface/: mr_kinetik_dxl_interface.h
src/arm/px100_core/px100_dynamixel_interface/launch/: px100_core.launch
src/arm/px100_core/px100_dynamixel_interface/msg/: JointTrajectoryCommand.msg
src/arm/px100_core/px100_dynamixel_interface/src/: CyArm.py  CyRobotCore.py  joint_trajectory_control.py  mr_kinetik_dxl_interface.cpp
src/arm/px100_core/px100_dynamixel_interface/srv/: OperatingModes.srv  RobotInfo.srv  TorqueEnable.srv
src/arm/px100_description/: CMakeLists.txt  README.md  package.xml
src/arm/px100_description/launch/: px100_description.launch
src/arm/px100_description/rviz/: px100_description.rviz
src/arm/px100_description/urdf/: px100.urdf.xacro
src/arm/px100_gazebo/: CMakeLists.txt  README.md  package.xml
src/arm/px100_gazebo/config/: px100_texture.gazebo
src/arm/px100_gazebo/config/trajectory_controllers/: px100_trajectory_controllers.yaml
src/arm/px100_gazebo/launch/: px100_gazebo.launch
src/arm/px100_moveit/: .setup_assistant  CMakeLists.txt  README.md  package.xml
src/arm/px100_moveit/config/: fake_controllers.yaml  gazebo_px100.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  px100.srdf  px100.srdf.xacro  simple_moveit_controllers.yaml
src/arm/px100_moveit/config/fake_controllers/: 4dof_controllers.yaml
src/arm/px100_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  px100_moveit.launch  px100_moveit_controller_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml  warehouse.launch
src/arm/px100_moveit_impl/: CMakeLists.txt  README.md  package.xml
src/arm/px100_moveit_impl/include/px100_moveit_impl/: move_group_interface.h
src/arm/px100_moveit_impl/scripts/: moveit_python_example.py
src/arm/px100_moveit_impl/src/: move_group_interface.cpp  move_group_interface_obj.cpp  move_group_pick_place.cpp
src/arm/px100_perception/: CMakeLists.txt  README.md  package.xml
src/arm/px100_perception/launch/: darknet-3d.launch  kinetibot_perception.launch  px100_perception_pipeline.launch  realsense.launch  yolo_tiny.launch  yolo_tiny_3d.launch
src/arm/px100_perception/script/: object_detection.py  pick_place.py  vision_learning.ipynb
src/arm/px100_perception/scripts/: point_cloud_processor.py
src/arm/px100_perception/src/: cloud_cluster_0001.pcd  cloud_cluster_0002.pcd  cloud_cluster_0003.pcd  cluser.pcd  cropped_cloud.pcd  model_normal.pcd  object_detection.cpp  perception_pipeline.cpp  scene_sampling.pcd  seg_planner.pcd
src/arm/px100_perception/src/pointcloud/: cloud_cluster_0000.pcd  model_descriptor.pcd  model_sampling.pcd  voxel_pc.pcd
src/arm/sim/px100_description/: CMakeLists.txt  package.xml
src/arm/sim/px100_gazebo/config/: px100_texture.gazebo
src/arm/sim/px100_gazebo/launch/: px100_gazebo.launch
src/arm/sim/px100_gazebo/media/materials/scripts/: px100_black.material
