<?xml version="1.0"?>
<package format="2">
  <name>px100_moveit_impl</name>
  <version>0.0.1</version>
  <description>The px100_moveit implementation package</description>
  <maintainer email="ankurkhandelwal08027@gmail.com">ankur</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>px100_control</build_depend>
  <build_depend>px100_gazebo</build_depend>
  <build_depend>px100_moveit</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>interactive_markers</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>px100_control</build_export_depend>
  <build_export_depend>px100_gazebo</build_export_depend>
  <build_export_depend>px100_moveit</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>moveit_core</build_export_depend>
  <build_export_depend>moveit_visual_tools</build_export_depend>
  <build_export_depend>moveit_ros_planning</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <build_export_depend>interactive_markers</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>px100_control</exec_depend>
  <exec_depend>px100_gazebo</exec_depend>
  <exec_depend>px100_moveit</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
</package>
