<?xml version="1.0"?>
<package format="2">
  <name>px100_control</name>
  <version>0.0.1</version>
  <description>The px100_control package</description>
  <maintainer email="ankurkhandelwal08027@gmail.com">Ankur Khandelwal</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>joint_trajectory_controller</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dynamixel_workbench_controllers</build_depend>
  <build_depend>px100_moveit</build_depend>
  <build_depend>px100_dynamixel_interface</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>dynamixel_workbench_controllers</build_export_depend>
  <build_export_depend>px100_moveit</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>joint_limits_interface</build_export_depend>
  <build_export_depend>joint_trajectory_controller</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>px100_dynamixel_interface</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>dynamixel_workbench_controllers</exec_depend>
  <exec_depend>px100_moveit</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_limits_interface</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>px100_dynamixel_interface</exec_depend>


</package>
