<?xml version="1.0"?>
<package format="2">
  <name>px100_description</name>
  <version>0.0.1</version>
  <description>The px100 arm description package</description>
  <maintainer email="ankurkhandelwal08027@gmail.com">Ankur Khandelwal</maintainer>
  <license>BSD</license>
  <author email="ankurkhandelwal08027@gmail.com">Ankur Khandelwal</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>joint_state_publisher_gui</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>joint_state_publisher</build_export_depend>
  <build_export_depend>joint_state_publisher_gui</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>roslaunch</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export>
  </export>
</package>
